--- a/appsettings.json
+++ b/appsettings.json
@@ -1,15 +1,15 @@
 ﻿{
+ "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "Secret": "e91d084b-6bd3-4014-a93d-c747fa8c491a 5ef0c87a-1f98-11eb-adc1-0242ac120002",
     "TokenExpiresInMinutes": 1,
     "RefreshTokenExpiresInMinutes": 2
-  },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*"
+  }
 }
