--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
- "Logging": {
+  "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
@@ -8,8 +8,11 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "Secret": "e91d084b-6bd3-4014-a93d-c747fa8c491a 5ef0c87a-1f98-11eb-adc1-0242ac120002",
-    "TokenExpiresInMinutes": 1,
-    "RefreshTokenExpiresInMinutes": 2
+    "Secret": "e91d084b-6bd3-4014-a93d-gUJKg_NGEKQEfC_s62zmgSHPTc55gIUydjpxom3EXUgcpOQow1VfU2sN3OiH_MVNg",
+    "TokenExpiresInMinutes": 2,
+    "RefreshTokenExpiresInMinutes": 60
+  },
+  "ConnectionStrings": {
+    "Default": "Data Source=RAMIN-PC;Initial Catalog=aspnet-core-3-jwt-refresh-tokens-api;Integrated Security=True;"
   }
 }
